--- a/src/app/pages/cliente/cliente.component.html
+++ b/src/app/pages/cliente/cliente.component.html
@@ -10,11 +10,11 @@
 </div>
 
 <div class="card" style="width: 18rem; margin-top: 50px;">
-  <div class="card-body">
-    <h5 class="card-title">titulo</h5>
-    <p class="card-text">saaaaaadasdsadasdasdasdasdadasdasd</p>
-    <button type="button" class="btn btn-danger" (click)="excluir()">Excluir</button>
-    <button type="button" class="btn btn-warning" (click)="editar()">Editar</button>
+  <div class="card-body" *ngFor='let not of noticia'>
+    <h5 class="card-title"> {{ not.title }}</h5>
+    <p class="card-text"> {{ not.description }} </p>
+    <button type="button" class="btn btn-danger" (click)="excluir(not)">Excluir</button>
+    <button type="button" class="btn btn-warning" (click)="editar(not)">Editar</button>
   </div>
 </div>
 
