--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <div class="sb-sidenav-menu">
             <div class="nav">
                 <div class="sb-sidenav-menu-heading">Sistema</div>
-                <a class="nav-link" routerLink="/cliente">Noticias</a>
+                <a class="nav-link" routerLink="/noticia">Noticias</a>
             </div>
         </div>
         <div class="sb-sidenav-footer">
