corrigindo o editar noticia e add btn ler mais

--- a/src/app/pages/noticia/noticia.component.html
+++ b/src/app/pages/noticia/noticia.component.html
@@ -22,6 +22,9 @@
      (click)="editar()">
       Editar
     </button>
+    <button type="button" class="btn btn-primary">
+     Ler mais
+   </button>
     <app-editar-noticia *ngIf="bolEditar" [noticiaRecebida]="noticiaCompartilhada"></app-editar-noticia>
     <app-modal-excluir *ngIf="bolExcluir" [noticiaRecebida]="noticiaCompartilhada"></app-modal-excluir>
   </div>
