--- a/src/app/components/modal-excluir/modal-excluir.component.html
+++ b/src/app/components/modal-excluir/modal-excluir.component.html
@@ -1,18 +1,64 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<h1 class="mt-4">Noticias</h1>
+<ol class="breadcrumb mb-4">
+    <li class="breadcrumb-item active">Excluir Noticia</li>
+</ol>
+
+<div class="container">
+  <form #clienteForm="ngForm">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label>Titulo:</label>
+          <input type="text" class="form-control" disabled [(ngModel)]="noticiaRecebida.title" name="title"/>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label>Descrição:</label>
+          <input type="text" class="form-control" disabled [(ngModel)]="noticiaRecebida.description" name="description">
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-2">
+        <button type="submit" class="btn btn-success"
+        data-toggle="modal" data-target="#excluirModal">
+            <i class="fa fa-save"></i> Excluir
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2">
+        <button type="submit" class="btn btn-danger" routerLink="/noticia">
+            <i class="fa fa-save"></i> Cancelar
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
+
+<div class="modal fade" id="excluirModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" routerLink="/noticia" aria-label="Close">
+        <h5 class="modal-title" id="exampleModalLabel">Para Excluir coloque sua senha:</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        Você deseja excluir Noticia: {{ noticiaRecebida.title }} ?
+        <label>Senha:</label>
+        <input type="password" class="form-control" >
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn " data-dismiss="modal" routerLink="/noticia">Fechar</button>
-        <button type="button" class="btn btn-danger" data-dismiss="modal" routerLink="/noticia" (click)="excluir(noticiaRecebida)">Excluir</button>
+        <button type="button" class="btn " data-dismiss="modal">Voltar</button>
+        <button type="button" class="btn btn-danger"  data-dismiss="modal" (click)="excluir(noticiaRecebida)" routerLink="/noticia">Excluir</button>
       </div>
     </div>
   </div>
 </div>
+
+
