--- a/src/app/pages/editar-noticia/editar-noticia.component.html
+++ b/src/app/pages/editar-noticia/editar-noticia.component.html
@@ -24,7 +24,8 @@
 
     <div class="row">
       <div class="col-md-2">
-        <button type="submit" class="btn btn-success" (click)="editarNoticia()">
+        <button type="submit" class="btn btn-success"
+        data-toggle="modal" data-target="#editarModal">
             <i class="fa fa-save"></i> Editar
         </button>
       </div>
@@ -39,3 +40,23 @@
   </form>
 </div>
 
+<div class="modal fade" id="editarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Para Excluir coloque sua senha:</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <label>Senha:</label>
+        <input type="password" class="form-control" >
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn " data-dismiss="modal">Voltar</button>
+        <button type="button" class="btn btn-primary"  data-dismiss="modal"  (click)="editarNoticia()" routerLink="/noticia">Editar</button>
+      </div>
+    </div>
+  </div>
+</div>
