--- a/src/app/pages/noticia/noticia.component.css
+++ b/src/app/pages/noticia/noticia.component.css
@@ -2,3 +2,10 @@
   width: 50rem;
   margin-top: 50px;
 }
+
+.description {
+  max-width: 300ch;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
