--- a/src/app/pages/cadastrar-noticia/cadastrar-noticia.component.html
+++ b/src/app/pages/cadastrar-noticia/cadastrar-noticia.component.html
@@ -1,6 +1,6 @@
 <h1 class="mt-4">Noticias</h1>
 <ol class="breadcrumb mb-4">
-    <li class="breadcrumb-item active">Cadastrar Noticia</li>
+  <li class="breadcrumb-item active">Cadastrar Noticia</li>
 </ol>
 
 <div class="container">
@@ -9,7 +9,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>Titulo:</label>
-          <input type="text" class="form-control" [(ngModel)]="noticia.title" name="title"/>
+          <input type="text" class="form-control" [(ngModel)]="noticia.title" name="title" />
         </div>
       </div>
     </div>
@@ -25,14 +25,14 @@
     <div class="row">
       <div class="col-md-2">
         <button type="submit" class="btn btn-success" (click)="salvarNoticia()">
-            <i class="fa fa-save"></i> Salvar
+          Salvar
         </button>
       </div>
     </div>
     <div class="row">
       <div class="col-md-2">
         <button type="submit" class="btn btn-danger" routerLink="/noticia">
-            <i class="fa fa-save"></i> Cancelar
+          Cancelar
         </button>
       </div>
     </div>
