--- a/src/app/pages/editar-noticia/editar-noticia.component.html
+++ b/src/app/pages/editar-noticia/editar-noticia.component.html
@@ -1,6 +1,6 @@
 <h1 class="mt-4">Noticias</h1>
 <ol class="breadcrumb mb-4">
-    <li class="breadcrumb-item active">Editar Noticia</li>
+  <li class="breadcrumb-item active">Editar Noticia</li>
 </ol>
 
 <div class="container">
@@ -9,7 +9,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>Titulo:</label>
-          <input type="text" class="form-control" [(ngModel)]="noticiaRecebida.title" name="title"/>
+          <input type="text" class="form-control" [(ngModel)]="noticiaRecebida.title" name="title" />
         </div>
       </div>
     </div>
@@ -24,23 +24,23 @@
 
     <div class="row">
       <div class="col-md-2">
-        <button type="submit" class="btn btn-success"
-        data-toggle="modal" data-target="#editarModal">
-            <i class="fa fa-save"></i> Editar
+        <button type="submit" class="btn btn-success" data-toggle="modal" data-target="#editarModal">
+          Editar
         </button>
       </div>
     </div>
     <div class="row">
       <div class="col-md-2">
         <button type="submit" class="btn btn-danger" routerLink="/noticia">
-            <i class="fa fa-save"></i> Cancelar
+          Cancelar
         </button>
       </div>
     </div>
   </form>
 </div>
 
-<div class="modal fade" id="editarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="editarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -51,11 +51,12 @@
       </div>
       <div class="modal-body">
         <label>Senha:</label>
-        <input type="password" class="form-control" >
+        <input type="password" class="form-control">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn " data-dismiss="modal">Voltar</button>
-        <button type="button" class="btn btn-primary"  data-dismiss="modal"  (click)="editarNoticia()" routerLink="/noticia">Editar</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="editarNoticia()"
+          routerLink="/noticia">Editar</button>
       </div>
     </div>
   </div>
